--- a/style.css
+++ b/style.css
@@ -40,4 +40,14 @@
 		color:white;
 		
 	}
+
+	input[type="text"] 
+	{
+      width: 350px;
+	  border: none;
+      border-bottom: 2px solid #00BFFF;
+
+    }
+
+
 	
