--- a/style.css
+++ b/style.css
@@ -49,5 +49,28 @@
 
     }
 
+	input[type="password"] 
+	{
+      width: 350px;
+	  border: none;
+      border-bottom: 2px solid #00BFFF;
+
+    }
+
+	input[type="email"] 
+	{
+      width: 350px;
+	  border: none;
+      border-bottom: 2px solid #00BFFF;
+
+    }
+
+	.hide{
+  display:none;
+}
+.show{
+  display:block;
+}
+
 
 	
